--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
+  "name": "ngo-connect",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "dotenv": "^16.4.7",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
